Closed
Bug 258902
Opened 21 years ago
Closed 21 years ago
[patch]Import OmniWeb 5 Bookmarks
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: david.haas, Assigned: mikepinkerton)
Details
Attachments
(1 file, 2 obsolete files)
|
9.52 KB,
patch
|
jaas
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
This imports OmniWeb 5 bookmarks
| Reporter | ||
Comment 1•21 years ago
|
||
This allows importing of OmniWeb 5 bookmarks.
If the BookmarkManager.mm part of the patch doesn't apply
cleanly, make a note. I tried to clean out the parts that
involved the firefox menu separator import bug, but might
not have succeeded entirely.
| Reporter | ||
Updated•21 years ago
|
Attachment #158589 -
Flags: review?(joshmoz)
| Reporter | ||
Updated•21 years ago
|
Target Milestone: --- → Camino0.9
Attachment #158589 -
Flags: review?(me)
Comment 2•21 years ago
|
||
(In reply to comment #1)
> If the BookmarkManager.mm part of the patch doesn't apply
> cleanly, make a note. I tried to clean out the parts that
> involved the firefox menu separator import bug, but might
> not have succeeded entirely.
patching file src/bookmarks/BookmarkManager.mm
Hunk #1 succeeded at 748 (offset 7 lines).
Hunk #2 FAILED at 836.
1 out of 2 hunks FAILED -- saving rejects to file
src/bookmarks/BookmarkManager.mm.rej
dave would you care to repost a patch ?
| Reporter | ||
Comment 3•21 years ago
|
||
see if this one applies
Attachment #158589 -
Attachment is obsolete: true
Attachment #158589 -
Flags: review?(me)
Attachment #158589 -
Flags: review?(joshmoz)
Attachment #163174 -
Flags: review?(joshmoz)
Comment 4•21 years ago
|
||
Comment on attachment 163174 [details] [diff] [review]
updated patch
> titleString = [[NSString alloc] initWithFormat:NSLocalizedString(@"Imported %@ Bookmarks",@"Imported %@ Bookmarks"),[selectedItem title]];
>+ [favoriteFolder setTitle:NSLocalizedString(@"OmniWeb Favorites",@"OmniWeb Favorites")];
>+ [publishedFolder setTitle:NSLocalizedString(@"OmniWeb Published",@"OmniWeb Published")];
These strings needs to be added to the localized.strings when the patch will be
checked in.
Attachment #163174 -
Flags: review+
+ NSArray *owFiles = [NSArray arrayWithObjects:
+ @"~/Library/Application Support/OmniWeb 5/Bookmarks.html",
+ @"~/Library/Application Support/OmniWeb 5/Favorites.html",
+ @"~/Library/Application Support/OmniWeb 5/Published.html"];
This list is not nil terminated and thus crashes a lot, which is bad.
Also, the folder names are funny. Could we always make a folder called "Imported
OmniWeb 5 Bookmarks" and put subfolders for each file under that?
Attachment #163174 -
Flags: review?(joshmoz) → review-
| Reporter | ||
Comment 7•21 years ago
|
||
I added in "nil" to arrayWithObjects. That's it. Not that I've done it in a
while, but I seem to recall diffs on localized.strings were always messy, so
just add the names in by hand.
As far as the goofy names for imported folders - the patch already always make
an "Imported OmniWeb 5 Bookmarks" folder. Two of the three possible bookmark
files get dropped into their own subfolders folders insider this folder. The
file that doesn't get a subfolder is the "main" bookmark file - it seems a
stretch to make a "Bookmarks" subfolder inside "Imported OmniWeb 5 Bookmarks"
for that file.
Now, if you don't like the names "OmniWeb Favorites" or "OmniWeb Published" for
the special subfolder names, feel free to replace them with better names in
localized.strings file.
Attachment #163174 -
Attachment is obsolete: true
Comment on attachment 164509 [details] [diff] [review]
fixed patch
with nil added, r+
Attachment #164509 -
Flags: review?(joshmoz)
Attachment #164509 -
Flags: review?(joshmoz) → review+
Attachment #164509 -
Flags: superreview?(pinkerton)
| Assignee | ||
Comment 9•21 years ago
|
||
Comment on attachment 164509 [details] [diff] [review]
fixed patch
sr=pink
Attachment #164509 -
Flags: superreview?(pinkerton) → superreview+
Comment 10•21 years ago
|
||
landed on trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•