add support for importing Omniweb 5 bookmarks (bug 258902) sr=pinkerton